[gd_scene load_steps=11 format=3 uid="uid://ltkr1u0005je"]

[ext_resource type="Shader" path="res://resources/shaders/fog.gdshader" id="1_262jt"]
[ext_resource type="Script" path="res://scripts/menu.gd" id="2_trsny"]
[ext_resource type="Texture2D" uid="uid://tw8t38ns0seh" path="res://icon.svg" id="3_dmqu8"]
[ext_resource type="FontFile" uid="uid://bo5l8x7yp2hfd" path="res://resources/fonts/CasinoShadow.ttf" id="4_br527"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ra6kj"]
shader = ExtResource("1_262jt")
shader_parameter/color = Vector3(0.5, 0.5, 0.55)
shader_parameter/OCTAVES = 4

[sub_resource type="ShaderMaterial" id="ShaderMaterial_tv0er"]
shader = ExtResource("1_262jt")
shader_parameter/color = Vector3(0.5, 0.5, 0.55)
shader_parameter/OCTAVES = 4

[sub_resource type="LabelSettings" id="LabelSettings_a41rt"]
font = ExtResource("4_br527")
font_size = 175
outline_size = 25
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_x0d7c"]
font_size = 50

[sub_resource type="GDScript" id="GDScript_ig4fr"]
script/source = "extends Timer


# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass
"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pa5y4"]
size = Vector2(1824, 120)

[node name="Menu" type="Control"]
material = SubResource("ShaderMaterial_ra6kj")
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_trsny")

[node name="Background" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_tv0er")
scale = Vector2(12.2266, 6.47656)
texture = ExtResource("3_dmqu8")
centered = false

[node name="VBoxContainer" type="VBoxContainer" parent="."]
z_index = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -22.5
offset_top = -27.5
offset_right = 22.5
offset_bottom = 27.5
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Casino
Showdown"
label_settings = SubResource("LabelSettings_a41rt")
horizontal_alignment = 1

[node name="Start" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(250, 60)
layout_mode = 2
size_flags_horizontal = 4

[node name="Label" type="Label" parent="VBoxContainer/Start"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -57.0
offset_top = -69.0
offset_right = 57.0
grow_horizontal = 2
grow_vertical = 0
text = "start"
label_settings = SubResource("LabelSettings_x0d7c")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Options" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(250, 60)
layout_mode = 2
size_flags_horizontal = 4

[node name="Label" type="Label" parent="VBoxContainer/Options"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -57.0
offset_top = -69.0
offset_right = 57.0
grow_horizontal = 2
grow_vertical = 0
text = "options"
label_settings = SubResource("LabelSettings_x0d7c")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Credits" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(250, 60)
layout_mode = 2
size_flags_horizontal = 4
text = "}"

[node name="Label" type="Label" parent="VBoxContainer/Credits"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -82.0
offset_top = -69.0
offset_right = 82.0
grow_horizontal = 2
grow_vertical = 0
text = "credits"
label_settings = SubResource("LabelSettings_x0d7c")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Exit" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(250, 60)
layout_mode = 2
size_flags_horizontal = 4

[node name="Label" type="Label" parent="VBoxContainer/Exit"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -57.0
offset_top = -69.0
offset_right = 57.0
grow_horizontal = 2
grow_vertical = 0
text = "exit"
label_settings = SubResource("LabelSettings_x0d7c")
horizontal_alignment = 1
vertical_alignment = 1

[node name="SpawnerCD" type="Timer" parent="."]
wait_time = 3.0
autostart = true
script = SubResource("GDScript_ig4fr")

[node name="FallingObjects" type="Node2D" parent="."]

[node name="DeleteBorder" type="Area2D" parent="FallingObjects"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="FallingObjects/DeleteBorder"]
position = Vector2(780, 1090)
shape = SubResource("RectangleShape2D_pa5y4")

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
[connection signal="timeout" from="SpawnerCD" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="FallingObjects/DeleteBorder" to="." method="_on_delete_border_area_entered"]
